# ControlHub

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  RELEASE.md  commands.sh  docker-compose.yml  find_moteus_ids.sh  install-server.sh  updates.json
.cargo/: config.toml
.github/workflows/: auto-tag.yml  release.yml
data/: config.toml  rover.urdf
desktop/: Dockerfile  nginx.conf
driver/: Cargo.toml  build.rs
driver/src/: api.rs  assets.rs  config.rs  follower.rs  localizer.rs  main.rs  motor.rs  simulator.rs  state.rs  urdf.rs  wifi.rs
web/: LICENSE.md  package.json  svelte.config.js  vite.config.js
web/scripts/: tauri.ts
web/src-tauri/: Cargo.toml  tauri.conf.json
web/src-tauri/capabilities/: default.json
web/src-tauri/icons/: icon.icns
web/src-tauri/src/: lib.rs
web/src/lib/: AllNotifications.svelte  NotificationsUI.svelte  Panels.svelte  Section.svelte  SettingsOverlay.svelte  Topbar.svelte  VersionDisclaimer.svelte  WindowControls.svelte  api-client.ts  config-api.ts  constants.ts  gamepad-control.svelte.ts  index.ts  map.ts  math.ts  moteus-types.ts  rover-connection.svelte.ts  rover-control.svelte.ts  state.svelte.ts  types.ts
web/src/lib/components/: CardTitle.svelte  EmergencyControls.svelte  JoystickControl.svelte  Minimap.svelte  StatusCard.svelte  TelemetryCard.svelte
web/src/lib/data/: rover.svelte.ts
web/src/lib/grid/: CanvasRender.svelte  CanvasRenderLoader.svelte  Layout.svelte  Overlay.svelte  PlaceOverlay.svelte  PreviewBox.svelte  (+3 more)
web/src/routes/: +layout.svelte  +layout.ts  +page.svelte  global.css
(+47 files in other folders)
