[package]
name = "driver"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
clap = "4.6.1"
moteus = { workspace = true }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "net", "sync", "time"] }
tower-http = { version = "0.6.8", features = ["cors"] }
