[package]
name = "driver"
version.workspace = true
edition = "2024"

[dependencies]
axum = "0.8.7"
clap = "4.6.1"
moteus = { workspace = true }
quick-xml = "0.41.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "net", "sync", "time"] }
toml = "1.1.2"
tower-http = { version = "0.7.0", features = ["cors"] }
